fixed responsive issues on iphone

--- a/src/components/blog.module.scss
+++ b/src/components/blog.module.scss
@@ -1,6 +1,6 @@
 .blog {
   display: block;
-  margin-bottom: 2rem;
+  // margin-bottom: 2rem;
   text-decoration: none;
   letter-spacing: 1px;
   // word-spacing: 2px;
